# agent-runtime-lab

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/agent-runtime-closure-fix/v1/: decision-log.jsonl  handoff.md  plan.json  (+2 more)
codex_middleware/: __init__.py  cli.py
configs/: default.yaml
data/benchmarks/: tasks.jsonl
docs/: README.md  architecture.md  design_decisions.md  eval_protocol.md  trace_schema.md
examples/: benchmark_tasks.jsonl  mcp_adapter_demo.py  task_constraints.yaml  task_plan_execute.yaml  task_react.yaml
memory-bench/: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
memory-bench/.github/workflows/: ci.yml
memory-bench/configs/: benchmark.yaml  strategies.yaml
memory-bench/data/benchmark_sets/: constraint_memory.jsonl  distractor_memory.jsonl  preference_memory.jsonl  slot_memory.jsonl
memory-bench/docs/: design.md  metrics.md  usage.md
memory-bench/src/memory_bench/: __init__.py  cli.py
memory-bench/src/memory_bench/adapters/: __init__.py  base.py  factory.py  mock.py  openai.py  runtime.py
memory-bench/src/memory_bench/datasets/: __init__.py  config.py  generator.py  io.py
memory-bench/src/memory_bench/evaluators/: __init__.py  metrics.py  runner.py  scoring.py
memory-bench/src/memory_bench/reports/: __init__.py  golden.py  io.py  render.py
memory-bench/src/memory_bench/strategies/: __init__.py  base.py  factory.py  full_context.py  parsing.py  sliding_window.py  structured_memory.py  summary_memory.py
memory-bench/src/memory_bench/types/: __init__.py  models.py
memory-bench/tests/: test_adapters.py  test_cli_e2e.py  test_datasets.py  test_scoring_metrics.py  test_strategies.py
scripts/: README.md  ci_local.sh
src/agent_runtime_lab/: __init__.py  app.py  cli.py  config.py  critic.py  eval.py  executor.py  memory.py  planner.py  reliability.py  reporting.py  result.py  retrieval.py  runtime.py  session.py  trace.py  types.py  validators.py
tests/: __init__.py
tests/golden/: expected_react_trace_event.json  test_trace_golden.py
tests/integration/: test_runtime_cli_integration.py
tests/unit/: test_config_contracts.py  test_eval_reporting_contracts.py  test_mcp_adapter_contracts.py  test_reliability_validators_contracts.py  test_result_contracts.py  test_runtime_loops_contracts.py  test_smoke.py  test_tools_and_memory_retrieval_contracts.py  test_trace_contracts.py  test_types_contracts.py
(+8 files in other folders)
